--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	
 		<link href="./_app/immutable/assets/0.jlBTXk4N.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.ocDWQeLk.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.YXczTzq-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.kKrq_TM8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.AooZZmQy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.QO7luzU9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2MUNDcRi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.eXhnAVKM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.nDvk2Vem.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.04Y9GXzM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.pUSIVDfT.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
@@ -29,8 +29,9 @@
 			
 			<script>
 				{
-					__sveltekit_nnb6xf = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_plybln = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/note2"
 					};
 
 					const element = document.currentScript.parentElement;
@@ -38,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.YXczTzq-.js"),
-						import("./_app/immutable/entry/app.2MUNDcRi.js")
+						import("./_app/immutable/entry/start.AooZZmQy.js"),
+						import("./_app/immutable/entry/app.eXhnAVKM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
