--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	
 		<link href="./_app/immutable/assets/0.jlBTXk4N.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.ocDWQeLk.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.mp5an__q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.d2Qc3JXA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.XnYpOIPx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.A5mX95Xq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.TA7J1jeJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.7wtZJDIm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.04Y9GXzM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_c84rko = {
+					__sveltekit_1mz78ky = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.mp5an__q.js"),
-						import("./_app/immutable/entry/app.TA7J1jeJ.js")
+						import("./_app/immutable/entry/start.XnYpOIPx.js"),
+						import("./_app/immutable/entry/app.7wtZJDIm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
