--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	
 		<link href="./_app/immutable/assets/0.jlBTXk4N.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.ocDWQeLk.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Nyq-ba8K.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ETbV6W9j.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.-kleRutA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.MT4l7q0H.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.kd4QdztI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ulvucYtL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.04Y9GXzM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_dwlsb4 = {
+					__sveltekit_9k2iuu = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Nyq-ba8K.js"),
-						import("./_app/immutable/entry/app.kd4QdztI.js")
+						import("./_app/immutable/entry/start.-kleRutA.js"),
+						import("./_app/immutable/entry/app.ulvucYtL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
