--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 	
 		<link href="./_app/immutable/assets/0.jlBTXk4N.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.ocDWQeLk.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.M8nLqQQY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.MsnfFKFK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.QXHz9crx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.qwvW9czj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.hixUEDoM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.VqwCZ96-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.04Y9GXzM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.jPD8ZL6J.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.TVh8-x7A.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_bth2qg = {
+					__sveltekit_1i30iqb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.M8nLqQQY.js"),
-						import("./_app/immutable/entry/app.hixUEDoM.js")
+						import("./_app/immutable/entry/start.QXHz9crx.js"),
+						import("./_app/immutable/entry/app.VqwCZ96-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
