--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<link rel="icon" href="./favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.jlBTXk4N.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.D8FRstQi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.EegqWM3F.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Xcj3Ybep.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.P2tsmvor.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DoDW2Be4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BjOT2rvr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.f6wfGFED.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.04Y9GXzM.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.rF-iwD_z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.kRN9U02J.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.xwPGcPOr.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1tdfsyh = {
+					__sveltekit_mmbjx8 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.EegqWM3F.js"),
-						import("./_app/immutable/entry/app.BjOT2rvr.js")
+						import("./_app/immutable/entry/start.P2tsmvor.js"),
+						import("./_app/immutable/entry/app.f6wfGFED.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
