--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	
 		<link href="./_app/immutable/assets/0.D8FRstQi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.P2tsmvor.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DoDW2Be4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.-yzS3mgB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.EJMCrWGO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.f6wfGFED.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.FUb6tnMB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.rF-iwD_z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_mmbjx8 = {
+					__sveltekit_1t23p26 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.P2tsmvor.js"),
-						import("./_app/immutable/entry/app.f6wfGFED.js")
+						import("./_app/immutable/entry/start.-yzS3mgB.js"),
+						import("./_app/immutable/entry/app.FUb6tnMB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
