--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <head>
 	<meta charset="utf-8" />
+	<link rel="manifest" href="./manifest.json" />
 	<link rel="icon" href="./favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.D8FRstQi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0o6xfy49.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ql9MiMBP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.w_ACyI6q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.-7tek6Sh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.HGN1nEdb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.daiARbOo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.rF-iwD_z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -29,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_ng5ce3 = {
+					__sveltekit_1q9je6s = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -39,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0o6xfy49.js"),
-						import("./_app/immutable/entry/app.HGN1nEdb.js")
+						import("./_app/immutable/entry/start.w_ACyI6q.js"),
+						import("./_app/immutable/entry/app.daiARbOo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
@@ -49,6 +50,12 @@
 							error: null
 						});
 					});
+
+					if ('serviceWorker' in navigator) {
+						addEventListener('load', function () {
+							navigator.serviceWorker.register('./service-worker.js');
+						});
+					}
 				}
 			</script>
 		</div>
