--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	
 		<link href="./_app/immutable/assets/0.D8FRstQi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.w_ACyI6q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.-7tek6Sh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1WdyUG0a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.dIF5OCJH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.daiARbOo.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.eFYyMkkl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.rF-iwD_z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_1q9je6s = {
+					__sveltekit_mc60rb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.w_ACyI6q.js"),
-						import("./_app/immutable/entry/app.daiARbOo.js")
+						import("./_app/immutable/entry/start.1WdyUG0a.js"),
+						import("./_app/immutable/entry/app.eFYyMkkl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
