--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	
 		<link href="./_app/immutable/assets/0.D8FRstQi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ex-jQOtB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.SqkFjHeB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.P0R2Pw_o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ei_a3kkT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.FIh9s-zH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Vvh256nR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.rF-iwD_z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_1xu48vt = {
+					__sveltekit_ozz91v = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ex-jQOtB.js"),
-						import("./_app/immutable/entry/app.FIh9s-zH.js")
+						import("./_app/immutable/entry/start.P0R2Pw_o.js"),
+						import("./_app/immutable/entry/app.Vvh256nR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
