--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	
 		<link href="./_app/immutable/assets/0.D8FRstQi.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.EqPzq7a4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.0na4Y8kD.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.enyk7ga8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry._5NkrSNR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.UUKhyLNb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BGMsbfMx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.rF-iwD_z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_uilo2m = {
+					__sveltekit_1epb0c8 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.EqPzq7a4.js"),
-						import("./_app/immutable/entry/app.UUKhyLNb.js")
+						import("./_app/immutable/entry/start.enyk7ga8.js"),
+						import("./_app/immutable/entry/app.BGMsbfMx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
