--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<link rel="icon" href="./favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.D8FRstQi.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.jrQgBrF_.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.EA8FFi0D.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.dqFI3o1w.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0oMfLCAQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Z9mBvn4y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.46Bka0KH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Ccl2X3Um.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.rF-iwD_z.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.kGZKXzRR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.lIAty09h.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Odz4Q0fB.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_jzf2sa = {
+					__sveltekit_95qfpx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.EA8FFi0D.js"),
-						import("./_app/immutable/entry/app.46Bka0KH.js")
+						import("./_app/immutable/entry/start.0oMfLCAQ.js"),
+						import("./_app/immutable/entry/app.Ccl2X3Um.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
