--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	
 		<link href="./_app/immutable/assets/0.jrQgBrF_.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0oMfLCAQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Z9mBvn4y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.HKxY_JmZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Qc65l4un.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ccl2X3Um.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.glMH6fUO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.kGZKXzRR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_95qfpx = {
+					__sveltekit_1e523mn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0oMfLCAQ.js"),
-						import("./_app/immutable/entry/app.Ccl2X3Um.js")
+						import("./_app/immutable/entry/start.HKxY_JmZ.js"),
+						import("./_app/immutable/entry/app.glMH6fUO.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
