--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 	
 		<link href="./_app/immutable/assets/0.jrQgBrF_.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.26kbxIwP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.HKxY_JmZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Qc65l4un.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3VFvXMBy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.YEkM5QMV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.glMH6fUO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.lUlz_xJY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.kGZKXzRR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Odz4Q0fB.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.JGbJZpwQ.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_1e523mn = {
+					__sveltekit_ura70x = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.HKxY_JmZ.js"),
-						import("./_app/immutable/entry/app.glMH6fUO.js")
+						import("./_app/immutable/entry/start.3VFvXMBy.js"),
+						import("./_app/immutable/entry/app.lUlz_xJY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
