--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	
 		<link href="./_app/immutable/assets/0.K5qebANG.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.vssWtHMK.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.AzhWFcdT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.f-ruVDw-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.P-U8e9lY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Drqd3aUx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1UeBE8nT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3MIE1i_W.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.YWd8VDXI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_11jptb2 = {
+					__sveltekit_1v7f8xm = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.AzhWFcdT.js"),
-						import("./_app/immutable/entry/app.1UeBE8nT.js")
+						import("./_app/immutable/entry/start.P-U8e9lY.js"),
+						import("./_app/immutable/entry/app.3MIE1i_W.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
