--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 	
 		<link href="./_app/immutable/assets/0.K5qebANG.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.vssWtHMK.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.P-U8e9lY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Drqd3aUx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4x5-Wo4E.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.m88h2t_q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3MIE1i_W.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Mayr2u7w.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.YWd8VDXI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.lBL19DEa.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.27rXK6Je.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_1v7f8xm = {
+					__sveltekit_10sknvc = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.P-U8e9lY.js"),
-						import("./_app/immutable/entry/app.3MIE1i_W.js")
+						import("./_app/immutable/entry/start.4x5-Wo4E.js"),
+						import("./_app/immutable/entry/app.Mayr2u7w.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
