--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<link rel="icon" href="./favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.pcvya4ay.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.Xo1cVz_T.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.1GhTS8ie.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bn4DBqkH.js">
+		<link href="./_app/immutable/assets/0.Nci_YE0L.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.Pz-C48T2.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.azt35Exw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.aJifruHV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.gfr0xQ_h.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.QqVG--yM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.HE0cBUVJ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.SH5L3V77.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.v8xa1P9W.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.d1RXD9UM.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_8l92d7 = {
+					__sveltekit_cletwz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.1GhTS8ie.js"),
-						import("./_app/immutable/entry/app.gfr0xQ_h.js")
+						import("./_app/immutable/entry/start.azt35Exw.js"),
+						import("./_app/immutable/entry/app.QqVG--yM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
