--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	
 		<link href="./_app/immutable/assets/0.-oQZ8bm1.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.5LP4ccXo.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.908vU68w.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.rZNT9fIG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.XbqjbGM_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.GnHlBJyn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app._a3Gbar8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.OOCrEOid.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.XMU5PJBr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_62gl2 = {
+					__sveltekit_179mpao = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.908vU68w.js"),
-						import("./_app/immutable/entry/app._a3Gbar8.js")
+						import("./_app/immutable/entry/start.XbqjbGM_.js"),
+						import("./_app/immutable/entry/app.OOCrEOid.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
