--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.-oQZ8bm1.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.5LP4ccXo.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.XbqjbGM_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.GnHlBJyn.js">
+		<link href="./_app/immutable/assets/2.sCwkI54V.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.eo7RPBPe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.6x88g40A.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.OOCrEOid.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.nSI9dzel.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.XMU5PJBr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.rY9QoZ4k.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.ijJe4qf6.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_179mpao = {
+					__sveltekit_1o1v8ib = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.XbqjbGM_.js"),
-						import("./_app/immutable/entry/app.OOCrEOid.js")
+						import("./_app/immutable/entry/start.eo7RPBPe.js"),
+						import("./_app/immutable/entry/app.nSI9dzel.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
