--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<link rel="icon" href="./favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.-oQZ8bm1.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.sCwkI54V.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.LSuRqfb7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.LsWDwTyT.js">
+		<link href="./_app/immutable/assets/0.Pvl0esyV.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.tpl-mbcN.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.kc4w9n2Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.HvwZHac5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.MqVFNJ9V.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.mQQZ-7su.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.XMU5PJBr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.KKa5ovfy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ma9CXx0G.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Lz26SM8C.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.RFCU_fSr.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -26,11 +26,11 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">   <main> <div class="bubble-menu"></div> <div class="p-4 max-md:px-2 max-md:pb-2 max-md:pt-4"></div></main> 
+	<div style="display: contents">   <main> <div class="bubble-menu rounded-md"></div> <div class="p-4 max-md:px-2 max-md:pb-2 max-md:pt-4"></div></main> 
 			
 			<script>
 				{
-					__sveltekit_jsvo47 = {
+					__sveltekit_tcsanx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.LSuRqfb7.js"),
-						import("./_app/immutable/entry/app.MqVFNJ9V.js")
+						import("./_app/immutable/entry/start.kc4w9n2Z.js"),
+						import("./_app/immutable/entry/app.KKa5ovfy.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
