--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.Pvl0esyV.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.tpl-mbcN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.kc4w9n2Z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.HvwZHac5.js">
+		<link href="./_app/immutable/assets/2.s6Rs4Atc.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.xKDGsZ3g.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.J9qJiWEH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.KKa5ovfy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.nUcnox3e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.ma9CXx0G.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.RFCU_fSr.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.K0Vtrgkn.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_tcsanx = {
+					__sveltekit_tvozqt = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.kc4w9n2Z.js"),
-						import("./_app/immutable/entry/app.KKa5ovfy.js")
+						import("./_app/immutable/entry/start.xKDGsZ3g.js"),
+						import("./_app/immutable/entry/app.nUcnox3e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
