--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 	
 		<link href="./_app/immutable/assets/0.Pvl0esyV.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.s6Rs4Atc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.r5-yihLL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.bnpHZY4n.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0TRxhhYn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vlLoHvou.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.LoOhcTW3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.on4UbutL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.ma9CXx0G.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.PnHZy1tL.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.bOgCncWJ.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_jo00j6 = {
+					__sveltekit_1muxx4q = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.r5-yihLL.js"),
-						import("./_app/immutable/entry/app.LoOhcTW3.js")
+						import("./_app/immutable/entry/start.0TRxhhYn.js"),
+						import("./_app/immutable/entry/app.on4UbutL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
