--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	
 		<link href="./_app/immutable/assets/0.PbFf590r.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.s6Rs4Atc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.QXfD-pdR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Q-2c_U4W.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e4OfrODF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.AlTdQ6Ua.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2nfltf0s.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.P_WwBsAB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.jrNCVAMu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_v9ob76 = {
+					__sveltekit_10j1ab9 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.QXfD-pdR.js"),
-						import("./_app/immutable/entry/app.2nfltf0s.js")
+						import("./_app/immutable/entry/start.e4OfrODF.js"),
+						import("./_app/immutable/entry/app.P_WwBsAB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
