--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.PbFf590r.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.s6Rs4Atc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.TwS-soES.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C5-rEH1j.js">
+		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4_ifeR5S.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.TGHhtXo_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1BscaSry.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.nbUeBm8A.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.jrNCVAMu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.A1FD8UA4.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.zQwEjJzb.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -30,7 +30,7 @@
 			
 			<script>
 				{
-					__sveltekit_18jeimy = {
+					__sveltekit_11vnuhf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.TwS-soES.js"),
-						import("./_app/immutable/entry/app.1BscaSry.js")
+						import("./_app/immutable/entry/start.4_ifeR5S.js"),
+						import("./_app/immutable/entry/app.nbUeBm8A.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
