--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+	<title>LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
 </head>
